# backend/admin/internal/router/auth_router/auth_router.go
@@ -9,6 +9,7 @@ import (
 func RegisterRouters(router fiber.Router) {
 	group := router.Use(middleware2.AuthMiddleware(), middleware2.EncryptMiddleware())
 	registerSysRoleRouters(group.Group("/sys/role"))
+	registerSysResourceRouters(group.Group("/sys/resource"))
 	registerSysDictRouters(group.Group("/sys/dict"))
 	registerSysLanguageRouters(group.Group("/sys/language"))
 	registerSysOperationLogRouters(group.Group("/sys/operation/log"))
